# sk_mcp_demo

./: .env.dev  .env.example  .gitignore  LICENSE.txt  README.md  demo_semantic_kernel.py  demo_simple_client.py  gitignore.txt  pyproject.toml  start_mcp_rag_server.bat  start_mcp_rag_server_inspector.bat  start_mcp_server.bat  start_orchestrator_web.bat
demo_web/: __init__.py  orchestrator_api.py
demo_web/static/: index.html  orchestrator.html
mcp_rag/: .env.local.example  README.md  poetry.toml  pyproject.toml  test_mcp_client_phase1.py  test_rag_components.py
mcp_rag/notebooks/: chroma_db_names_sample.ipynb  chroma_db_products_sample.ipynb  demo_rag.ipynb  nb_quick_start.ipynb  notebook_utils.py  rag_end_to_end.ipynb  sample_serp_output.json  test1.ipynb
mcp_rag/src/: mcp_server_fundamentals.py  mcp_server_product_agent.py  server_phase1.py  server_phase2.py
mcp_rag/src/models/: __init__.py  evaluation_models.py  search_models.py  web_search_models.py
mcp_rag/src/tools/: __init__.py  chroma_search.py  rag_evaluator.py  rag_generator.py  web_search.py
mcp_rag/src/utils/: __init__.py  caller.py  config.py  event_store.py  mcp_config.py
notebooks/: data_generation.ipynb  demo_sk_product_agent.ipynb  nb_quick_start.ipynb  notebook_utils.py  sk_orchestrator_demo.ipynb  sk_product_chat_agent_demo.ipynb
src/: __init__.py  main.py
src/agents/: sk_orchestrator.py  sk_product_chat_agent.py
src/api/: app.py
src/client/: README.md  __init__.py
src/client/core/: __init__.py  config.py  discovery.py  executor.py  session.py
src/client/legacy/: __init__.py
src/client/plugins/: __init__.py  base.py  semantic_kernel.py
src/utils/: __init__.py  caller.py  config.py
