[project]
name = "sk-mcp-demo"
version = "0.1.0"
description = "A python semantic kernel demo using MCP with RAG and a local vector score and web searchto answer questions with hallucination checks and risk scoring."
authors = [
    {name = "April Hazel"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[tool.poetry.scripts]
start = "src.main:main"
dev = "src.main:main_dev"
prod = "src.main:main_prod"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"