[project]
name = "sk-mcp-demo"
version = "0.1.0"
description = "A python semantic kernel demo using MCP with RAG and a local vector score and web searchto answer questions with hallucination checks and risk scoring."
authors = [
    {name = "April Hazel"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "openai (>=1.97.1,<2.0.0)", # Required by chromadb for embedding functions
    "pandas (>=2.3.1,<3.0.0)",
    "mermaid (>=0.3.2,<0.4.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "semantic-kernel[mcp] (>=1.35.0,<2.0.0)",
    "fastapi (>=0.115.12,<1.0.0)",
    "uvicorn (>=0.35.0,<1.0.0)",
    "requests (>=2.32.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
ipykernel = "^6.25.0"

[tool.poetry.scripts]
start = "src.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"